[package]
name = "adhom_minigrep"
description = "minigrep is a toy project to practice the fundamentals of the Rust programming laguage."
version = "0.1.0"
edition = "2021"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
